--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -5,7 +5,7 @@
     android:id="@+id/contactFragmentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ContactsFragment" >
+    tools:context=".fragments.contacts.ContactsFragment" >
 
     <ListView
         android:id="@+id/contactsListView"
