--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/shoppingListLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ShoppingListFragment">
+    tools:context=".fragments.shoppinglist.ShoppingListFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
