--- a/app/src/main/res/layout/fragment_turni_pulizia.xml
+++ b/app/src/main/res/layout/fragment_turni_pulizia.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.TurniPuliziaFragment"
+    tools:context=".fragments.duties.TurniPuliziaFragment"
     android:id="@+id/fragment_turni_prova">
 
     <LinearLayout
