--- a/app/src/main/res/layout/fragment_house_created.xml
+++ b/app/src/main/res/layout/fragment_house_created.xml
@@ -27,7 +27,7 @@
         <TextView
             android:id="@+id/textView6"
             android:layout_width="285dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/house_created_label"
             android:textAlignment="center"
