--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -28,4 +28,14 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_margin="10dp"/>
 
+        <ProgressBar
+            android:id="@+id/notesProgressbar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="85dp"
+            android:layout_height="82dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/notesListView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
