--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -15,9 +15,10 @@
             android:id="@+id/calendar_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:dateTextAppearance="@style/Theme.Roommates.Calendar"
+            android:weekDayTextAppearance="@style/Theme.Roommates.Calendar"
             app:layout_constraintBottom_toTopOf="@+id/divider"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/divider"
