--- a/app/src/main/res/layout/fragment_nuovo_evento.xml
+++ b/app/src/main/res/layout/fragment_nuovo_evento.xml
@@ -17,12 +17,13 @@
             android:id="@+id/nomeEvento"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:hint="Enter text"/>
+            android:hint="Enter text"
+            android:textColorHint="@android:color/darker_gray" />
 
         <DatePicker
+            android:id="@+id/dataEvento"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/dataEvento"/>
+            android:layout_height="wrap_content" />
 
         <!-- Submit Button -->
         <Button
