--- a/app/src/main/res/layout/fragment_nuovo_sondaggio.xml
+++ b/app/src/main/res/layout/fragment_nuovo_sondaggio.xml
@@ -17,17 +17,20 @@
             android:id="@+id/nuovaDomanda"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:autofillHints="none"
             android:background="@drawable/border"
             android:hint="@string/survey_domanda"
+            android:inputType="text"
             android:padding="5dp"
-            android:autofillHints="none"
-            android:inputType="text" />
+            android:textColor="@color/primaryTextColor"
+            android:textColorHint="@android:color/darker_gray" />
 
         <CheckBox
             android:id="@+id/sceltaMultipla"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:text="@string/multiple_choiice"/>
+            android:text="@string/multiple_choiice"
+            android:textColor="@color/primaryTextColor" />
 
         <TextView
             android:layout_width="match_parent"
