--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/border"
+    android:layout_marginHorizontal="18dp"
     android:layout_marginVertical="5dp"
-    android:layout_marginHorizontal="18dp">
+    android:background="@drawable/border_white"
+    android:backgroundTint="@color/white">
 
     <!-- Customize the content of each item here -->
     <!-- Example: TextView to display the item's text -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/border_white"
+        android:backgroundTint="@color/white"
         android:orientation="vertical">
 
         <TextView
@@ -19,14 +21,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:textAppearance="@android:style/TextAppearance.Medium"/>
+            android:textAppearance="@android:style/TextAppearance.Medium" />
+
         <TextView
             android:id="@+id/itemDescrizioneEvento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp" />
     </LinearLayout>
-
 
 
 </FrameLayout>
