--- a/app/src/main/res/layout/fragment_new_turno_pulizia.xml
+++ b/app/src/main/res/layout/fragment_new_turno_pulizia.xml
@@ -28,10 +28,16 @@
         android:id="@+id/spinnerContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:paddingHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@id/turnoNameField"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:orientation="vertical">
+        app:layout_constraintTop_toBottomOf="parent">
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/duties_order" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,7 +48,7 @@
                 android:id="@+id/userSpinner"
                 android:layout_width="315dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <ImageView
                 android:id="@+id/addUserToTurnoButton"
