--- a/app/src/main/res/layout/fragment_sondaggi.xml
+++ b/app/src/main/res/layout/fragment_sondaggi.xml
@@ -36,6 +36,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/sondaggiListView" />
 
+        <TextView
+            android:id="@+id/noSurveysTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_surveys"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/sondaggiListView" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
