--- a/app/src/main/res/layout/fragment_nuova_spesa_comune.xml
+++ b/app/src/main/res/layout/fragment_nuova_spesa_comune.xml
@@ -32,7 +32,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/euro"
-        android:inputType="textMultiLine"
+        android:inputType="numberDecimal"
         android:textColor="@android:color/primary_text_dark"
         android:textColorHint="@android:color/secondary_text_dark"
         app:layout_constraintEnd_toEndOf="parent"
