--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -82,5 +82,11 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:colorAccent">#1b5e20</item>
+        <item name="backgroundColor">@color/background_dark</item>
+        <item name="android:background">@color/background_dark</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlHighlight">@color/white</item>
+        <item name="colorOnPrimary">@color/white</item>
     </style>
 </resources>
