--- a/app/src/main/res/layout/fragment_new_turno_pulizia.xml
+++ b/app/src/main/res/layout/fragment_new_turno_pulizia.xml
@@ -31,7 +31,7 @@
         android:orientation="vertical"
         android:paddingHorizontal="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/turnoNameField">
 
         <TextView
             android:id="@+id/textView14"
